- refactored services to clean code - added neo4j converter for TaskCreateDTO - modified task creation process