@@ -11,6 +11,16 @@ import java.util.NoSuchElementException;
 @ControllerAdvice
 public class ErrHandler {
 
+    @ExceptionHandler(RuntimeException.class)
+    public ResponseEntity<?> handleRuntimeException(RuntimeException e) {
+        return ResponseEntity.badRequest().body(
+                new AppError(
+                        400,
+                        e.getMessage()
+                )
+        );
+    }
+
     @ExceptionHandler(NoSuchElementException.class)
     public ResponseEntity<?> handleNoSuchElementException(NoSuchElementException e) {
         return ResponseEntity.badRequest().body(
@@ -26,7 +36,7 @@ public class ErrHandler {
         return ResponseEntity.badRequest().body(
                 new AppError(
                         400,
-                        e.getBindingResult().getAllErrors().get(0).getDefaultMessage()
+                        e.getBindingResult().getAllErrors().getFirst().getDefaultMessage()
                 )
         );
     }
